updates: jquery.js up to 3.5.1; bootstrap.js up to 4.5.2, spring-security up to 5.4.0; spring-core up to 5.2.9.RELEASE; mysql-connector-java up to 8.0.21; update views because new version of bootstrap;

--- a/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/component/field/LabelCheckBoxRow.html
+++ b/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/component/field/LabelCheckBoxRow.html
@@ -1,9 +1,9 @@
 <html xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd">
 <wicket:panel>
-    <div class="control-group">
-        <label wicket:id="label-id" for="name" class="control-label">Label name</label>
-        <div class="controls">
-            <input wicket:id="field-id" type="checkbox">
+    <div class="form-group">
+        <div class="from-check">
+            <input wicket:id="field-id" id="field-id" class="form-check-input" type="checkbox">
+            <label class="form-check-label" for="field-id" wicket:id="label-id">Check me out</label>
         </div>
     </div>
 </wicket:panel>
