--- a/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/component/field/LabelDropDownChoiceRow.html
+++ b/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/component/field/LabelDropDownChoiceRow.html
@@ -1,9 +1,9 @@
 <html xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd">
 <wicket:panel>
-    <div class="control-group" wicket:id="container">
-        <label class="control-label" wicket:id="label-id" for="name">Label name</label>
+    <div class="form-group" wicket:id="container">
+        <label wicket:id="label-id" for="name">Label name</label>
         <div class="controls">
-            <select tabindex="0" wicket:id="field-id" >
+            <select class="form-control" tabindex="0" wicket:id="field-id" >
                 <option value="0">null</option>
             </select>
         </div>
