--- a/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/component/field/LabelTextAreaRow.html
+++ b/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/component/field/LabelTextAreaRow.html
@@ -1,9 +1,9 @@
 <html xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd">
 <wicket:panel>
-    <div class="control-group" wicket:id="row">
-        <label class="control-label" wicket:id="label-id" for="name">Label name</label>
+    <div class="form-group" wicket:id="row">
+        <label wicket:id="label-id" for="name">Label name</label>
         <div class="controls">
-            <textarea wicket:id="field-id"></textarea>
+            <textarea class="form-control" wicket:id="field-id"></textarea>
         </div>
     </div>
 </wicket:panel>
