--- a/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/component/field/LabelValueRow.html
+++ b/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/component/field/LabelValueRow.html
@@ -2,10 +2,10 @@
 <wicket:panel>
 
 
-    <div class="control-group">
-        <label class="control-label" wicket:id="label-id" >Label name</label>
+    <div class="form-group">
+        <label wicket:id="label-id" >Label name</label>
         <div class="controls">
-            <label wicket:id="field-id"></label>
+            <label wicket:id="field-id" class="font-weight-bold"></label>
         </div>
     </div>
 </wicket:panel>
