--- a/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/component/paging/SuperflyPagingNavigator.html
+++ b/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/component/paging/SuperflyPagingNavigator.html
@@ -13,8 +13,8 @@
         <span class='paging-sign'>of</span>
         <strong href="#" wicket:id="paging-count" class="paging-n">523</strong>
 
-        <a href="#" wicket:id="paging-next" class="paging-a">Next</a>
-        <a href="#" wicket:id="paging-last" class="paging-a">Last</a>
+        <a href="#" wicket:id="paging-next" class="paging-a pl-2">Next</a>
+        <a href="#" wicket:id="paging-last" class="paging-a pl-2">Last</a>
     </div>
 
 </wicket:panel>
